# segway_ros1_benchmark

./: README.md
data_factory/pcl_data/: 100kb_pcd.pcd  1mb_pcd.pcd  500kb_pcd.pcd
ros1_pub_and_sub/: CMakeLists.txt  package.xml
ros1_pub_and_sub/src/: pub_and_sub.cpp
ros1_pub_and_sub_helloworld/: CMakeLists.txt  package.xml
ros1_pub_and_sub_helloworld/src/: pub_and_sub.cpp  sub_and_pub.cpp
ros1_pub_and_sub_image/: CMakeLists.txt  package.xml
ros1_pub_and_sub_image/src/: pub_and_sub.cpp
ros1_publish_image/: CMakeLists.txt  package.xml
ros1_publish_image/src/: publisher.cpp  subscriber.cpp
ros1_publish_pointcloud/: CMakeLists.txt  package.xml
ros1_publish_pointcloud/src/: publisher.cpp  subscriber.cpp
ros1_write_pointcloud/: CMakeLists.txt  package.xml
ros1_write_pointcloud/src/: writer.cpp
segway_image_nodelet/: CMakeLists.txt  README.md  package.xml  pub_nodelet.xml  sub2_nodelet.xml  sub3_nodelet.xml  sub_nodelet.xml
segway_image_nodelet/src/: pub_with_nodelet.cpp  sub2_with_nodelet.cpp  sub3_with_nodelet.cpp  sub_with_nodelet.cpp
segway_pointcloud_nodelet/: CMakeLists.txt  package.xml  pub_nodelet.xml  sub2_nodelet.xml  sub3_nodelet.xml  sub_nodelet.xml
segway_pointcloud_nodelet/src/: pub_pc_with_nodelet.cpp  sub2_pc_with_nodelet.cpp  sub3_pc_with_nodelet.cpp  sub_pc_with_nodelet.cpp
